// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CHeaderText customize 1`] = `
<div>
  <span
    class="header-text bazinga"
  >
    Test
  </span>
</div>
`;

exports[`loads and displays CHeaderText component 1`] = `
<div>
  <span
    class="header-text"
  >
    Test
  </span>
</div>
`;
